--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Note taking app made with with express.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Tri Nguyen",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
     "mysql": "^2.16.0"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [
+    "note"
+  ]
 }
